--- a/data_oiv_wine.ipynb
+++ b/data_oiv_wine.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 141,
    "id": "c479ba05",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 142,
    "id": "27caed06",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 143,
    "id": "5f40ab0c",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "9edefacd-993f-4f0a-8c29-747dd71ea18b",
+       "ref": "06b67d54-3db6-4adc-9007-e839c3553733",
        "rows": [
         [
          "59377",
@@ -242,7 +242,7 @@
        "59381     NaN      NaN       NaN  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 144,
    "id": "945363b2",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "70c3838b-04cc-4306-8640-467909f37656",
+       "ref": "95c15f99-f60b-473b-85c6-dadd3be4e37a",
        "rows": [
         [
          "0",
@@ -453,7 +453,7 @@
        "4      Asia    Afghanistan  Fresh Grapes      Imports  1995  tonnes       0.0"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 145,
    "id": "9ba3b037",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 146,
    "id": "10c5cf71",
    "metadata": {},
    "outputs": [],
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 147,
    "id": "9231c7b9",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "ad5e494e-919e-4ea0-8bf3-0a0c0e3a16ec",
+       "ref": "95ae8cf3-faf2-4743-bd17-1aa958d21728",
        "rows": [
         [
          "120",
@@ -722,7 +722,7 @@
        "124   24071.0  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 148,
    "id": "feaeb288",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0dc69b81-12e4-44f4-aa29-d0aee7fadbcb",
+       "ref": "28dfb4ff-4206-4ad6-b286-ac6a295d4859",
        "rows": [
         [
          "36863",
@@ -990,7 +990,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "2ec82a2a-e755-48b0-a029-378f349ef4fc",
+       "ref": "5e28a333-f315-40da-9007-cf9c769b8027",
        "rows": [
         [
          "36864",
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 149,
    "id": "97ddac92",
    "metadata": {},
    "outputs": [],
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 150,
    "id": "00de26ab",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1201,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "33bf5858-6169-4584-9ddd-e424a252a68a",
+       "ref": "b890bee3-86ac-4ffb-a16d-58bae238dc09",
        "rows": [
         [
          "United States of America",
@@ -1503,7 +1503,7 @@
        "[197 rows x 1 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,8 +1515,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "id": "3b012b54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "Region/Country",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Quantity",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "94dc72a5-1f31-4ae3-8f04-be456528e5ee",
+       "rows": [
+        [
+         "Germany",
+         "84064.0"
+        ],
+        [
+         "United Kingdom",
+         "78770.0"
+        ],
+        [
+         "United States of America",
+         "77354.0"
+        ],
+        [
+         "France",
+         "36488.0"
+        ],
+        [
+         "Netherlands",
+         "26688.0"
+        ],
+        [
+         "Canada",
+         "24562.0"
+        ],
+        [
+         "People's Republic of China",
+         "23365.0"
+        ],
+        [
+         "Belgium",
+         "18962.0"
+        ],
+        [
+         "Russia",
+         "18119.0"
+        ],
+        [
+         "Portugal",
+         "16541.0"
+        ],
+        [
+         "Japan",
+         "15179.0"
+        ],
+        [
+         "Italy",
+         "13010.0"
+        ],
+        [
+         "Sweden",
+         "12490.0"
+        ],
+        [
+         "Denmark",
+         "10994.0"
+        ],
+        [
+         "Switzerland",
+         "10282.0"
+        ],
+        [
+         "Brazil",
+         "9485.0"
+        ],
+        [
+         "Czech Republic",
+         "9316.0"
+        ],
+        [
+         "Poland",
+         "8879.0"
+        ],
+        [
+         "Latvia",
+         "6034.0"
+        ],
+        [
+         "Australia",
+         "5898.0"
+        ],
+        [
+         "Norway",
+         "5791.0"
+        ],
+        [
+         "Ireland",
+         "5284.0"
+        ],
+        [
+         "Lithuania",
+         "5141.0"
+        ],
+        [
+         "Finland",
+         "4417.0"
+        ],
+        [
+         "Spain",
+         "4330.0"
+        ],
+        [
+         "Mexico",
+         "4324.0"
+        ],
+        [
+         "Austria",
+         "4102.0"
+        ],
+        [
+         "Korea (the Republic of)",
+         "3570.0"
+        ],
+        [
+         "Côte d'Ivoire",
+         "3394.0"
+        ],
+        [
+         "Belarus",
+         "3372.0"
+        ],
+        [
+         "Romania",
+         "2993.0"
+        ],
+        [
+         "Slovakia",
+         "2967.0"
+        ],
+        [
+         "New Zealand",
+         "2545.0"
+        ],
+        [
+         "Ukraine",
+         "2359.0"
+        ],
+        [
+         "United Arab Emirates",
+         "1960.0"
+        ],
+        [
+         "Namibia",
+         "1864.0"
+        ],
+        [
+         "China, Hong Kong SAR",
+         "1842.0"
+        ],
+        [
+         "Angola",
+         "1645.0"
+        ],
+        [
+         "Croatia",
+         "1588.0"
+        ],
+        [
+         "Singapore",
+         "1556.0"
+        ],
+        [
+         "Nigeria",
+         "1405.0"
+        ],
+        [
+         "Colombia",
+         "1283.0"
+        ],
+        [
+         "Luxemburg",
+         "1155.0"
+        ],
+        [
+         "Estonia",
+         "1113.0"
+        ],
+        [
+         "Serbia",
+         "1109.0"
+        ],
+        [
+         "China, Taiwan Province of",
+         "1096.0"
+        ],
+        [
+         "Greece",
+         "1082.0"
+        ],
+        [
+         "Philippines",
+         "1046.0"
+        ],
+        [
+         "Paraguay",
+         "1045.0"
+        ],
+        [
+         "Morocco",
+         "1000.0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 209
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Region/Country</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>84064.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>78770.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United States of America</th>\n",
+       "      <td>77354.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>France</th>\n",
+       "      <td>36488.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Netherlands</th>\n",
+       "      <td>26688.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kiribati</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Somalia</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iran</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Serbia And Montenegro</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Martinique</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>209 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Quantity\n",
+       "Region/Country                    \n",
+       "Germany                    84064.0\n",
+       "United Kingdom             78770.0\n",
+       "United States of America   77354.0\n",
+       "France                     36488.0\n",
+       "Netherlands                26688.0\n",
+       "...                            ...\n",
+       "Kiribati                       0.0\n",
+       "Somalia                        0.0\n",
+       "Iran                           0.0\n",
+       "Serbia And Montenegro          0.0\n",
+       "Martinique                     0.0\n",
+       "\n",
+       "[209 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_import_5y.query(\"Product == 'Wine' & Variable == 'Imports'\")[['Region/Country', 'Quantity']].groupby('Region/Country').sum().sort_values('Quantity',ascending=False).iloc[1:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a049b90",
    "metadata": {},
    "outputs": [],
    "source": []
